--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ ol {
 }
 
 .mob-menu-container {
-  padding: 0 16px;
+  /* padding: 0 16px; */
   padding-top: 72px;
   padding-bottom: 40px;
   display: flex;
@@ -102,6 +102,7 @@ ol {
   height: 100%;
   position: relative;
   width: 312px;
+  margin-left: 16px;
 }
 
 .mob-menu-close {
@@ -1300,7 +1301,8 @@ ol {
   height: 24px;
   fill: #2e2f42;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: #e7e9fc;
+  /* background-color: #e7e9fc; */
+  background-color: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
